update config, modules

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,17 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "def writeGen():\n",
+    "    dictionary = {'inputs': 'a','show':False,'draw_bbox': False, 'draw_heatmap': True, 'bbox_thr': 0.3, 'nms_thr': 0.3, 'kpt_thr': 0.3, 'tracking_thr': 0.3, 'use_oks_tracking': False, 'norm_pose_2d': False, 'rebase_keypoint_height': False, 'radius': 3, 'thickness': 1, 'skeleton_style': 'mmpose', 'black_background': False, 'vis_out_dir': '/home/nhan/Desktop/DATN/repo/Action_Recogntion/Cheating-Detection/test', 'pred_out_dir': '/home/nhan/Desktop/DATN/repo/Action_Recogntion/Cheating-Detection/test'}\n",
+    "    yield dictionary\n",
     "\n",
-    "image = cv2.imread('../assets/Rose.jpg')\n",
-    "cv2.namedWindow('haha')\n",
-    "cv2.imshow('haha',image)\n",
-    "cv2.waitKey(1)\n",
-    "cv2.destroyAllWindows()"
+    "dic = writeGen()\n",
+    "if isinstance(dic,str) and dic.startswith('webcam'):\n",
+    "    print('True')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = isinstance('aaa',str)\n",
+    "a"
    ]
   }
  ],
