--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -17,23 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = isinstance('aaa',str)\n",
-    "a"
+    "import imageio\n",
+    "\n",
+    "video_reader = imageio.get_reader('/home/nhan/Desktop/a/Cheating-Detection/assets/test_1.mp4')\n",
+    "\n",
+    "# Lấy thông tin về video\n",
+    "fps_video = video_reader.get_meta_data()['fps']\n",
+    "\n",
+    "# Chuyển đổi video thành GIF\n",
+    "with imageio.get_writer('test.gif', fps=30) as gif_writer:\n",
+    "    for frame in video_reader:\n",
+    "        gif_writer.append_data(frame)"
    ]
   }
  ],
@@ -53,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
