--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -17,21 +17,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building file /home/nhan/Desktop/a/Cheating-Detection/assets/test.gif with imageio.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion complete. GIF saved at: /home/nhan/Desktop/a/Cheating-Detection/assets/test.gif\n"
+     ]
+    }
+   ],
    "source": [
-    "import imageio\n",
+    "from moviepy.editor import VideoFileClip\n",
     "\n",
-    "video_reader = imageio.get_reader('/home/nhan/Desktop/a/Cheating-Detection/assets/test_1.mp4')\n",
+    "def convert_video_to_gif(input_path, output_path, loop=True):\n",
+    "    # Load video clip\n",
+    "    clip = VideoFileClip(input_path)\n",
     "\n",
-    "# Lấy thông tin về video\n",
-    "fps_video = video_reader.get_meta_data()['fps']\n",
+    "    # Convert video clip to GIF\n",
+    "    gif_path = output_path\n",
+    "    clip.write_gif(gif_path, fps=clip.fps, loop=loop)\n",
     "\n",
-    "# Chuyển đổi video thành GIF\n",
-    "with imageio.get_writer('test.gif', fps=30) as gif_writer:\n",
-    "    for frame in video_reader:\n",
-    "        gif_writer.append_data(frame)"
+    "    print(f'Conversion complete. GIF saved at: {gif_path}')\n",
+    "\n",
+    "# Thay đổi đường dẫn của file video và file gif theo nhu cầu của bạn\n",
+    "input_video_path = '/home/nhan/Desktop/a/Cheating-Detection/assets/test_1.mp4'\n",
+    "output_gif_path = '/home/nhan/Desktop/a/Cheating-Detection/assets/test.gif'\n",
+    "\n",
+    "# Gọi hàm để chuyển đổi video thành gif\n",
+    "convert_video_to_gif(input_video_path, output_gif_path)"
    ]
   }
  ],
